--- a/style.css
+++ b/style.css
@@ -6,26 +6,52 @@
   
   
   .container {
-    margin: 15px auto;
-    width: 70%;
-  }
+    margin-right: 100px;
+    margin-left: 100px;
+}
   
-  .violet{
-      background-color: violet;
+  .logo{
+      width: 16%;
+      margin-top: 14px;
+      padding-right: 15px;
+      border-right: 1px solid lightgray;
+    }
+
+    .header li{
+        list-style-type: none;
+        display: inline-block
+    }
+  
+    .header li{
+        font-size: 14px;
+        margin: auto 5px;
+        color: #b2b2b2;
+    }
+
+    .header ul{
+        margin: 30px auto;
+    }
+  
+  .yoga{
+      background-image: url("img/banner.jpg");
       width: 100%;
-      height: 140px;
+      height: 550px;
       margin-top: 20px;
-      
-  }
-  
-  
-  .beige{
-      background-color: #e1d67a;
-      width: 100%;
-      height: 500px;
-      margin-top: 20px;
-      
-  }
+      border-radius: 8px;
+    }
+
+    .yoga img{
+        border-radius: 8px;
+    }
+
+    .yoga h1,p{
+        padding-left: 70px;
+        color: white;
+    }
+
+    .yoga h1{
+        padding-top: 28%;
+    }
   
   .light-blue{
       background-color: lightblue;
