--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   
   
   .container {
+    height: auto;
     margin-right: 100px;
     margin-left: 100px;
 }
@@ -52,40 +53,88 @@
     .yoga h1{
         padding-top: 28%;
     }
+
+    .sezione2{
+        margin: 30px auto;
+    }
+
+    .sezione2 h2{
+        font-size: 40px;
+    }
+
+    .sezione2 h4{
+        color: #b0b0b0;
+    }
   
-  .light-blue{
-      background-color: lightblue;
+  .leadership{
       width: 100%;
-      height: 500px;
-      margin-top: 20px;
-      margin-bottom: 20px;
+      height: 400px;
       
   }
   
-  .riquadro-top{
-      height: 10%;
-  }
   
   
   .riquadro{
       float: left;
       width: 25%;
-      border-top: 16px solid blue;
-      border-bottom: 16px solid blue;
-      height: 90%;
+      border-top: 16px solid white;
+      border-bottom: 16px solid white;
+      height: 100%;
+      border: 1px solid black;
   }
   
   
   .big{
       width: 50%;
-      border-right: 14px solid blue;
-      border-left: 14px solid blue;
   }
   
-  .purple{
-      background-color: #8801fe;
+  .designed{
       width: 100%;
-      height: 70px;
-      margin-top: 10px;
-      
-  }
+      height: 20px;
+      text-align: center;
+}
+
+.riquadro{
+    background-repeat: no-repeat;
+    border: 1px solid lightgray;
+    height: 50%;
+}
+
+.riquadro:nth-child(1){
+    background-image: url("img/img-1.jpg");
+    background-position: top;
+    border-radius: 8px;
+    width: 22%;
+    
+}
+
+.riquadro:nth-child(2){
+    background-image: url("img/banner-2.jpg");
+    background-size: 80%;
+    background-position: top;
+    border-radius: 8px;
+    margin: auto 32px;
+    width: 50%;
+}
+
+.riquadro:nth-child(3){
+    background-image: url("img/img-3.jpg");
+    background-size: cover;
+    border-radius: 8px;
+    width: 22%;
+}
+
+.riquadro h3{
+    margin-top: 210px;
+    font-size: 20px;
+}
+
+.riquadro h5{
+    margin-top: 10px;
+    color: lightgray;
+    font-size: 14px;
+}
+
+#cuore{
+    color: red;
+}
