--- a/style.css
+++ b/style.css
@@ -81,7 +81,6 @@
       width: 25%;
       border-top: 16px solid white;
       border-bottom: 16px solid white;
-      height: 100%;
       background-repeat: no-repeat;
       height: 50%;
       filter: brightness(80%);
@@ -108,8 +107,8 @@
 
 .riquadro:nth-child(2){
     background-image: url("img/banner-2.jpg");
-    background-size: 100%;
-    background-position: top;
+    background-size: cover;
+      background-position: center;
     border-radius: 8px;
     margin: auto 32px;
     width: 50%;
